// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoardIntersection component displays a star point intersection 1`] = `
<div
  className="intersection hoshi"
  onClick={[Function]}
  style={
    Object {
      "float": "left",
      "lineHeight": "1",
      "paddingTop": "100%",
      "position": "relative",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "cursor": "pointer",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "background": "#63380E",
          "borderRadius": 9000,
          "height": "20%",
          "left": "50%",
          "minHeight": 4,
          "minWidth": 4,
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "20%",
        }
      }
    />
    <div
      style={
        Object {
          "background": "#63380E",
          "height": "1px",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": "50%",
          "transform": "translateY(-50%)",
        }
      }
    />
    <div
      style={
        Object {
          "background": "#63380E",
          "bottom": 0,
          "left": "50%",
          "position": "absolute",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "1px",
        }
      }
    />
  </div>
</div>
`;

exports[`BoardIntersection component displays edges intersections 1`] = `
<div
  className="intersection"
  onClick={[Function]}
  style={
    Object {
      "float": "left",
      "lineHeight": "1",
      "paddingTop": "100%",
      "position": "relative",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "cursor": "pointer",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "background": "#63380E",
          "height": "1px",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": "50%",
          "transform": "translateY(-50%)",
        }
      }
    />
    <div
      style={
        Object {
          "background": "#63380E",
          "bottom": 0,
          "left": "50%",
          "position": "absolute",
          "top": "50%",
          "transform": "translateX(-50%)",
          "width": "1px",
        }
      }
    />
  </div>
</div>
`;

exports[`BoardIntersection component displays edges intersections 2`] = `
<div
  className="intersection"
  onClick={[Function]}
  style={
    Object {
      "float": "left",
      "lineHeight": "1",
      "paddingTop": "100%",
      "position": "relative",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "cursor": "pointer",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "background": "#63380E",
          "height": "1px",
          "left": "50%",
          "position": "absolute",
          "right": 0,
          "top": "50%",
          "transform": "translateY(-50%)",
        }
      }
    />
    <div
      style={
        Object {
          "background": "#63380E",
          "bottom": 0,
          "left": "50%",
          "position": "absolute",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "1px",
        }
      }
    />
  </div>
</div>
`;

exports[`BoardIntersection component displays edges intersections 3`] = `
<div
  className="intersection"
  onClick={[Function]}
  style={
    Object {
      "float": "left",
      "lineHeight": "1",
      "paddingTop": "100%",
      "position": "relative",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "cursor": "pointer",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "background": "#63380E",
          "height": "1px",
          "left": 0,
          "position": "absolute",
          "right": "50%",
          "top": "50%",
          "transform": "translateY(-50%)",
        }
      }
    />
    <div
      style={
        Object {
          "background": "#63380E",
          "bottom": 0,
          "left": "50%",
          "position": "absolute",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "1px",
        }
      }
    />
  </div>
</div>
`;

exports[`BoardIntersection component displays edges intersections 4`] = `
<div
  className="intersection"
  onClick={[Function]}
  style={
    Object {
      "float": "left",
      "lineHeight": "1",
      "paddingTop": "100%",
      "position": "relative",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "cursor": "pointer",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "background": "#63380E",
          "height": "1px",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": "50%",
          "transform": "translateY(-50%)",
        }
      }
    />
    <div
      style={
        Object {
          "background": "#63380E",
          "bottom": "50%",
          "left": "50%",
          "position": "absolute",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "1px",
        }
      }
    />
  </div>
</div>
`;

exports[`BoardIntersection component displays the last placed white stone on an intersection 1`] = `
<div
  className="intersection"
  onClick={[Function]}
  style={
    Object {
      "float": "left",
      "lineHeight": "1",
      "paddingTop": "100%",
      "position": "relative",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "cursor": "auto",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "background": "#63380E",
          "height": "1px",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": "50%",
          "transform": "translateY(-50%)",
        }
      }
    />
    <div
      style={
        Object {
          "background": "#63380E",
          "bottom": 0,
          "left": "50%",
          "position": "absolute",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "1px",
        }
      }
    />
    <div
      className="stone stone-white"
      style={
        Object {
          "background": "#EEEEF0",
          "borderRadius": 9001,
          "bottom": "5%",
          "boxShadow": Array [
            "inset 0 -3.3333333333333335px 6.666666666666667px 0 rgba(0, 0, 0, .16)",
            "0 1.6666666666666667px 3.3333333333333335px 0 rgba(0, 0, 0, .16)",
            "0 1.6666666666666667px 5px 0 rgba(0, 0, 0, .12)",
          ],
          "left": "5%",
          "position": "absolute",
          "right": "5%",
          "top": "5%",
        }
      }
    >
      <div
        style={
          Object {
            "border": "0.2em solid #101015",
            "borderRadius": "100%",
            "height": "40%",
            "left": "30%",
            "position": "relative",
            "top": "30%",
            "width": "40%",
          }
        }
      />
    </div>
  </div>
</div>
`;
